# online-retail-churn

./: .gitignore  README.md  modeling.ipynb  pyproject.toml  report.html
report/: build_report.py  report_template.html
scripts/: build_bronze.py  build_silver.py
