[project]
name = "retail-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.18",
]
